--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jotape MC</title>
+    <link rel="stylesheet" href="index.css"
 </head>
 <body>
-    
+     <nav>
+        <ul>
+            <li>
+                <a> tragetória </a>
+            </li> 
+            <li>
+                <a> eventos e titulos </a>
+            </li>
+            <li>
+                <a> musicas </a>
+            </li>
+        </ul>
+     </nav>
 </body>
 </html>
